--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   cron: ^0.3.0
   flutter_launcher_icons: "^0.8.0"
   flutter_secure_storage: ^4.1.0
+  system_shortcuts: ^1.0.0
 
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
