--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_launcher_icons: "^0.8.0"
   flutter_secure_storage: ^4.1.0
   system_shortcuts: ^1.0.0
+  auto_size_text: ^2.1.0
 
   flutter:
     sdk: flutter
