--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   date_format: ^2.0.2
   evil_icons_flutter: ^0.5.0
   ionicons: ^0.1.2
-  flutter_ble_lib: ^2.3.2
+  flutter_ble_lib: 2.3.2
   path_provider: ^2.0.1
   mqtt_client: ^8.2.0
   cron: ^0.3.0
