--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   ionicons: ^0.1.2
   flutter_ble_lib: 2.3.2
   path_provider: ^2.0.1
-  mqtt_client: ^8.2.0
   cron: ^0.3.0
   flutter_launcher_icons: "^0.8.0"
   flutter_secure_storage: ^4.1.0
@@ -42,6 +41,7 @@ dependencies:
   flutter_foreground_task: ^1.0.7
   android_long_task: ^0.3.3
   flutter_logs: ^2.1.3
+  flutter_blue: ^0.7.3
 
   flutter:
     sdk: flutter
