--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   android_long_task: ^0.3.3
   flutter_logs: ^2.1.3
   flutter_blue: ^0.7.3
+  flutter_fimber_filelogger: ^1.1.1+1
+  flutter_fimber: ^0.6.3
 
   flutter:
     sdk: flutter
