--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,8 @@ android {
         applicationId "com.activate.trac2move"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 13
-        versionName "0.2.4"
+        versionCode 14
+        versionName "0.2.5"
 //        versionCode flutterVersionCode.toInteger()
 //        versionName flutterVersionName
     }
@@ -58,6 +58,10 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            minifyEnabled true
+            useProguard true
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
