--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,16 @@ dependencies:
   flutter_ble_lib: 2.3.2
   path_provider: ^2.0.1
   #cron: ^0.3.0
-  flutter_launcher_icons: "^0.8.0"
+#  flutter_launcher_icons: "^0.8.0"
   flutter_secure_storage: ^4.1.0
   system_shortcuts: ^1.0.0
   auto_size_text: ^2.1.0
   permission_handler: ^7.0.0
   location: ^4.1.1
   android_long_task: ^0.3.3
-  flutter_blue: ^0.7.3
+  flutter_blue:
+    git:
+      url: git://github.com/pauldemarco/flutter_blue.git
   access_settings_menu: ^0.0.1
   flutter_fimber_filelogger: ^1.1.1+1
   geolocator: ^7.0.3
