--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,7 @@ dependencies:
   permission_handler: ^7.0.0
   location: ^4.1.1
   android_long_task: ^0.3.3
-  flutter_blue:
-    git:
-      url: git://github.com/pauldemarco/flutter_blue.git
+  flutter_blue: ^0.7.3
   access_settings_menu: ^0.0.1
   flutter_fimber_filelogger: ^1.1.1+1
   geolocator: ^7.0.3
