started to rework the ble connection class with flutter_blue. done: syncSteps and Minutes, startRecording, stopRecording, findNearestDevice, timeSync, upload tbd:
Note: every function works. Tests show that we need to keep both BLE Managers.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   date_format: ^2.0.2
   evil_icons_flutter: ^0.5.0
   ionicons: ^0.1.2
-  flutter_ble_lib: 2.3.2
+  flutter_ble_lib:
+    git : https://github.com/Polidea/FlutterBleLib
   path_provider: ^2.0.1
   #cron: ^0.3.0
 #  flutter_launcher_icons: "^0.8.0"
@@ -43,6 +44,8 @@ dependencies:
   flutter_fimber_filelogger: ^1.1.1+1
   geolocator: ^7.0.3
   flutter_fimber: ^0.6.3
+#  flutter_blue:
+#    git : https://github.com/boskokg/flutter_blue
 
   flutter:
     sdk: flutter
