--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_toggle_tab: ^1.1.2
   shared_preferences: ^2.0.5
   ssh: ^0.0.7
   http: ^0.13.1
@@ -34,7 +35,6 @@ dependencies:
 #  flutter_launcher_icons: "^0.8.0"
   flutter_secure_storage: ^4.1.0
   system_shortcuts: 0.2.3
-
   auto_size_text: ^2.1.0
   permission_handler: ^7.0.0
   location: ^4.1.1
