--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,13 +51,17 @@ dependencies:
   day_night_time_picker: ^1.0.2
   bluetooth_enable: ^0.1.1
   toggle_switch: "^0.1.9"
-
+#  fl_chart: ^0.36.1
+  flutter_isolate: ^2.0.0
+  worker_manager: ^4.0.3
+  url_launcher: ^6.0.6
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_flutter_charts: ^19.1.66+1
 
 dev_dependencies:
   flutter_test:
