--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   isolate_handler: ^1.0.0
 #  worker_manager: ^4.0.3
   url_launcher: ^6.0.6
+  background_fetch:
+    git:
+      url: https://github.com/transistorsoft/flutter_background_fetch
   flutter:
     sdk: flutter
 
