--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,16 +2,17 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext {
         compileSdkVersion = 30                // or latest
-        targetSdkVersion = 30                // or latest
-        appCompatVersion = "1.1.0"           // or latest
+//        targetSdkVersion = 30                // or latest
+//        appCompatVersion = "1.1.0"           // or latest
     }
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -19,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven {
             // [required] background_fetch
