--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,15 @@ environment:
 
 dependencies:
   awesome_notifications: any
-  flutter_toggle_tab: ^1.1.2
+#  flutter_toggle_tab: ^1.1.2
   shared_preferences: ^2.0.5
-  ssh: ^0.0.7
-  http: ^0.13.1
+#  ssh: ^0.0.7
+  ssh2: ^2.2.1
   flutter_spinkit: "^5.0.0"
   date_format: ^2.0.2
   evil_icons_flutter: ^0.5.0
   ionicons: ^0.1.2
-  flutter_ble_lib: ^2.3.2
+  flutter_ble_lib: ^3.0.0-beta
   path_provider: ^2.0.1
   #cron: ^0.3.0
 #  flutter_launcher_icons: "^0.8.0"
@@ -38,35 +38,33 @@ dependencies:
   system_shortcuts: 0.2.3
   auto_size_text: ^2.1.0
   permission_handler: ^7.0.0
-  location: ^4.1.1
-  android_long_task: ^0.3.3
-  flutter_blue: ^0.7.3
-  access_settings_menu: ^0.0.1
+#  location: ^4.1.1
+  flutter_blue: ^0.8.0
+#  access_settings_menu: ^0.0.1
+  app_settings: 4.1.1
   flutter_fimber_filelogger: ^1.1.1+1
   flutter_cupertino_date_picker: ^1.0.26+2
   geolocator: ^7.0.3
-  flutter_fimber: ^0.6.3
+#  flutter_fimber: ^0.6.1
   need_resume: ^1.0.6
-  battery: ^2.0.2
   day_night_time_picker: ^1.0.2
 #  bluetooth_enable: ^0.1.1
   toggle_switch: "^0.1.9"
-#  fl_chart: ^0.36.1
   connectivity_plus: ^1.0.4
-  flutter_isolate: ^2.0.0
-#  isolate_handler: ^1.0.0
-#  worker_manager: ^4.0.3
+  flutter_isolate: ^2.0.1-pre
+#  flutter_isolate:
+#    git: https://github.com/rmawatson/flutter_isolate.git
   url_launcher: ^6.0.6
-  background_fetch:
-    git:
-      url: https://github.com/transistorsoft/flutter_background_fetch
+  background_fetch: ^1.0.1
+  http: ^0.13.3
+  cupertino_icons: ^1.0.2
+  syncfusion_flutter_charts: ^19.1.66+1
+
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  syncfusion_flutter_charts: ^19.1.66+1
 
 dev_dependencies:
   flutter_test:
