--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   awesome_notifications: any
 #  flutter_toggle_tab: ^1.1.2
   shared_preferences: ^2.0.5
-#  ssh: ^0.0.7
-  ssh2: ^2.2.1
+  ssh: ^0.0.7
+#  ssh2: ^2.2.3
   flutter_spinkit: "^5.0.0"
   date_format: ^2.0.2
   evil_icons_flutter: ^0.5.0
@@ -51,10 +51,11 @@ dependencies:
 #  bluetooth_enable: ^0.1.1
   toggle_switch: "^0.1.9"
   connectivity_plus: ^1.0.4
-  flutter_isolate: ^2.0.1-pre
-#  flutter_isolate:
-#    git: https://github.com/rmawatson/flutter_isolate.git
+#  flutter_isolate: ^2.0.0
+  flutter_isolate:
+    git: https://github.com/rmawatson/flutter_isolate.git
   url_launcher: ^6.0.6
+  ftpconnect: ^1.0.0
   background_fetch: ^1.0.1
   http: ^0.13.3
   cupertino_icons: ^1.0.2
