--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,7 @@ dependencies:
   toggle_switch: "^0.1.9"
   connectivity_plus: ^1.0.4
 #  flutter_isolate: ^2.0.0
-  flutter_isolate:
-    git: https://github.com/rmawatson/flutter_isolate.git
+  flutter_isolate: "2.0.1-pre"
   url_launcher: ^6.0.6
   ftpconnect: ^1.0.0
   background_fetch: ^1.0.1
