--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,35 +22,33 @@ environment:
 
 dependencies:
   awesome_notifications: any
-#  flutter_toggle_tab: ^1.1.2
   shared_preferences: ^2.0.5
-  ssh: ^0.0.7
-#  ssh2: ^2.2.3
+#  ssh: ^0.0.7
+  ssh2: ^2.2.3
   flutter_spinkit: "^5.0.0"
   date_format: ^2.0.2
   evil_icons_flutter: ^0.5.0
   ionicons: ^0.1.2
   flutter_ble_lib: ^3.0.0-beta
   path_provider: ^2.0.1
-  #cron: ^0.3.0
-#  flutter_launcher_icons: "^0.8.0"
+#  flutter_reactive_ble: ^5.0.1
   flutter_secure_storage: ^4.1.0
-  system_shortcuts: 0.2.3
-  auto_size_text: ^2.1.0
-  permission_handler: ^7.0.0
+  system_shortcuts: 1.0.0
+  auto_size_text: ^3.0.0
+  permission_handler: ^8.2.5
 #  location: ^4.1.1
   flutter_blue: ^0.8.0
 #  access_settings_menu: ^0.0.1
   app_settings: 4.1.1
-  flutter_fimber_filelogger: ^1.1.1+1
+  flutter_fimber_filelogger: ^2.0.0
   flutter_cupertino_date_picker: ^1.0.26+2
-  geolocator: ^7.0.3
+  geolocator: ^7.7.1
 #  flutter_fimber: ^0.6.1
   need_resume: ^1.0.6
   day_night_time_picker: ^1.0.2
 #  bluetooth_enable: ^0.1.1
-  toggle_switch: "^0.1.9"
-  connectivity_plus: ^1.0.4
+  toggle_switch: "^1.3.0"
+  connectivity_plus: ^2.0.2
 #  flutter_isolate: ^2.0.0
   flutter_isolate: "2.0.1-pre"
   url_launcher: ^6.0.6
