--- a/ios/Flutter/AppFrameworkInfo.plist
+++ b/ios/Flutter/AppFrameworkInfo.plist
@@ -14,7 +14,7 @@
 		<string>_trac2move._tcp</string>
 	</array>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>Play with BLE Compatible devices</string>
+	<string>Our app needs this connection, since it needs to connect to the BangleJS BLE device.</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Our app needs this connection, since it needs to connect to the BangleJS BLE device.</string>
 	<key>CFBundleDevelopmentRegion</key>
