--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,12 +38,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.activate.trac2move"
+        applicationId "de.activate.trac2move"
         minSdkVersion 27
         compileSdkVersion 30
-//        targetSdkVersion 32
-        versionName "3.1.0"
-        versionCode 62
+        targetSdkVersion 30
+        versionName "4.0.1"
+        versionCode 64
     }
     signingConfigs {
         release {
