--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_isolate: "2.0.2-pre"
   url_launcher: ^6.0.12
   background_fetch: ^1.0.2
-  http: ^0.13.4
+  http: 0.13.4
   cupertino_icons: ^1.0.4
   syncfusion_flutter_charts: ^19.3.48
 
