--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   http: 0.13.4
   cupertino_icons: ^1.0.4
   syncfusion_flutter_charts: ^19.3.48
-
+  dio: ^4.0.4
 
   flutter:
     sdk: flutter
