--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   syncfusion_flutter_charts: ^19.4.56
   dio: ^4.0.4
+  worker_manager: ^4.2.6
 
   flutter:
     sdk: flutter
